--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+    <title>Reinforcement Learning with Flappy Bird</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
@@ -14,75 +14,8 @@
     <link href="dist/styles.css" rel="stylesheet" />
   </head>
   <body class="bg-gray-100">
-    <div class="flex flex-wrap pt-4 gap-4 lg:gap-y-0 relative md:justify-between md:m-auto md:w-[1300px]">
-      <div class="w-[640px] bg-white overflow-x-scroll md:overflow-hidden shadow-sm">
-        <div class="h-[288px] overflow-hidden relative">
-          <div class="background"></div>
-          <div class="bird"></div>
-          <div class="pipe"></div>
-          <div class="ground"></div>
-          <div class="p-1 absolute left-0 top-0 z-10 font-mono text-white text-sm">
-            <div>Episode: <span class="episode"></span></div>
-          </div>
-        </div>
-      </div>
-      <div class="w-[640px] bg-white overflow-x-scroll md:overflow-hidden py-2 shadow-sm">
-        <div class="mb-5 px-2">
-          <input
-            type="text"
-            name="train-iterations"
-            class="border border-gray-500 train-iterations p-1"
-            placeholder="#episodes"
-          />
-          <button class="train-start-btn border border-gray-500 rounded-sm p-1">Train</button>
-          <div class="md:inline md:p-2 my-2"><progress class="progress hidden" value="0"></progress></div>
-        </div>
-        <div class="flex justify-between items-center mb-2 px-2">
-          <label for="epsilon"> Epsilon (ε) <i class="fas fa-question-circle" id="epsilon"></i></label>
-          <input
-            class="border border-gray-500 p-1 md:mr-48 epsilon"
-            type="number"
-            min="0"
-            max="1"
-            step="0.001"
-            value="0.005"
-            name="epsilon"
-          />
-        </div>
-        <div class="flex justify-between items-center mb-2 px-2">
-          <label for="alpha"> Alpha (α) <i class="fas fa-question-circle" id="alpha"></i></label>
-          <input
-            class="border border-gray-500 p-1 md:mr-48 alpha"
-            type="number"
-            min="0"
-            max="1"
-            step="0.001"
-            value="0.07"
-            name="alpha"
-          />
-        </div>
-        <div class="flex justify-between items-center mb-2 px-2">
-          <label for="gamma"> Gamma (γ) <i class="fas fa-question-circle" id="gamma"></i></label>
-          <input
-            class="border border-gray-500 p-1 md:mr-48 gamma"
-            type="number"
-            min="0"
-            max="1"
-            step="0.001"
-            value="0.095"
-            name="gamma"
-          />
-        </div>
-        <div class="my-5 flex justify-between md:justify-start mb-2 px-2">
-          <button class="start-simulation border border-gray-500 rounded-sm p-1 md:mr-6">Start</button>
-          <button class="stop-simulation border border-gray-500 rounded-sm p-1 md:mr-6">Stop</button>
-          <button class="show-chart border border-gray-500 rounded-sm p-1 md:mr-6">Plot Rewards</button>
-          <button class="clear-chart border border-gray-500 rounded-sm p-1 md:mr-6">Clear Plot</button>
-        </div>
-      </div>
-    </div>
-    <div class="flex flex-wrap pt-4 gap-4 lg:gap-y-0 relative md:justify-between md:m-auto md:w-[1300px]">
-      <div class="overflow-x-scroll md:overflow-hidden bg-white md:w-[640px]">
+    <div class="flex flex-wrap pt-4 gap-4 lg:gap-y-0 relative md:justify-center md:m-auto lg:w-[1300px]">
+      <div class="overflow-x-scroll md:overflow-hidden bg-white md:w-[640px] text-sm md:text-base">
         <h3 class="text-lg font-mono font-semibold text-center p-2">Reinforcement Learning with Flappy Bird</h3>
         <p class="p-2">
           This is an example demonstration of a reinforcement learning algorithm called Q-value iteration. With this
@@ -147,13 +80,77 @@
           </li>
         </ul>
       </div>
-      <div class="overflow-x-scroll md:overflow-hidden bg-white shadow-sm md:w-[640px] md:h-[400px]">
-        <svg class="chart"></svg>
+      <div class="w-full md:w-[640px] bg-white shadow-sm">
+        <div class="h-[288px] overflow-hidden relative">
+          <div class="background"></div>
+          <div class="bird"></div>
+          <div class="pipe"></div>
+          <div class="ground"></div>
+          <div class="p-1 absolute left-0 top-0 z-10 font-mono text-white text-sm">
+            <div>Episode: <span class="episode"></span></div>
+          </div>
+        </div>
+        <div class="bg-white overflow-x-scroll md:overflow-hidden py-2 shadow-sm text-sm md:text-base">
+          <div class="mb-5 px-2">
+            <input
+              type="text"
+              name="train-iterations"
+              class="border border-gray-500 train-iterations p-1"
+              placeholder="#episodes"
+            />
+            <button class="train-start-btn border border-gray-500 rounded-sm p-1">Train</button>
+            <div class="md:inline md:p-2 my-2">
+              <progress class="progress hidden" value="0"></progress><span class="ml-2 progressValue"></span>
+            </div>
+          </div>
+          <div class="flex justify-between items-center mb-2 px-2">
+            <label for="epsilon"> Epsilon (ε) <i class="fas fa-question-circle" id="epsilon"></i></label>
+            <input
+              class="border border-gray-500 p-1 md:mr-48 epsilon"
+              type="number"
+              min="0"
+              max="1"
+              step="0.001"
+              value="0.005"
+              name="epsilon"
+            />
+          </div>
+          <div class="flex justify-between items-center mb-2 px-2">
+            <label for="alpha"> Alpha (α) <i class="fas fa-question-circle" id="alpha"></i></label>
+            <input
+              class="border border-gray-500 p-1 md:mr-48 alpha"
+              type="number"
+              min="0"
+              max="1"
+              step="0.001"
+              value="0.07"
+              name="alpha"
+            />
+          </div>
+          <div class="flex justify-between items-center mb-2 px-2">
+            <label for="gamma"> Gamma (γ) <i class="fas fa-question-circle" id="gamma"></i></label>
+            <input
+              class="border border-gray-500 p-1 md:mr-48 gamma"
+              type="number"
+              min="0"
+              max="1"
+              step="0.001"
+              value="0.095"
+              name="gamma"
+            />
+          </div>
+          <div class="my-5 flex justify-between md:justify-start mb-2 px-2">
+            <button class="start-simulation border border-gray-500 rounded-sm p-1 md:mr-6">Start</button>
+            <button class="stop-simulation border border-gray-500 rounded-sm p-1 md:mr-6">Stop</button>
+            <button class="show-chart border border-gray-500 rounded-sm p-1 md:mr-6">Plot Rewards</button>
+            <button class="clear-chart border border-gray-500 rounded-sm p-1 md:mr-6">Clear Plot</button>
+          </div>
+        </div>
+        <div class="overflow-x-scroll md:overflow-hidden bg-white shadow-sm w-full md:w-[640px] md:h-[400px]">
+          <svg class="chart"></svg>
+        </div>
       </div>
     </div>
-    <script src="https://unpkg.com/@popperjs/core@2"></script>
-    <script src="https://unpkg.com/tippy.js@6"></script>
-    <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="dist/main.js"></script>
   </body>
 </html>
