fix hover color

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           <div class="mb-5 px-2 flex flex-wrap items-center justify-between">
             <label for="train-iterations">Training interations</label>
             <input type="text" name="train-iterations" class="border border-gray-500 train-iterations p-1" />
-            <button class="train-start-btn border border-gray-500 rounded-sm p-1 hover:bg-gray-500 hover:text-white">
+            <button class="train-start-btn border border-gray-500 rounded-sm p-1 hover:bg-blue-900 hover:text-white">
               Train
             </button>
             <div class="my-2 basis-24 relative">
@@ -195,20 +195,20 @@
           </div>
           <div class="my-5 flex justify-between md:justify-start mb-2 px-2">
             <button
-              class="start-simulation border border-gray-500 rounded-sm p-1 md:mr-6 hover:bg-gray-500 hover:text-white"
+              class="start-simulation border border-gray-500 rounded-sm p-1 md:mr-6 hover:bg-blue-900 hover:text-white"
             >
               Start
             </button>
             <button
-              class="stop-simulation border border-gray-500 rounded-sm p-1 md:mr-6 hover:bg-gray-500 hover:text-white"
+              class="stop-simulation border border-gray-500 rounded-sm p-1 md:mr-6 hover:bg-blue-900 hover:text-white"
             >
               Stop
             </button>
-            <button class="show-chart border border-gray-500 rounded-sm p-1 md:mr-6 hover:bg-gray-500 hover:text-white">
+            <button class="show-chart border border-gray-500 rounded-sm p-1 md:mr-6 hover:bg-blue-900 hover:text-white">
               Plot Rewards
             </button>
             <button
-              class="clear-chart border border-gray-500 rounded-sm p-1 md:mr-6 hover:bg-gray-500 hover:text-white"
+              class="clear-chart border border-gray-500 rounded-sm p-1 md:mr-6 hover:bg-blue-900 hover:text-white"
             >
               Clear Plot
             </button>
