fix bug in q learning

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
               </div>
             </div>
             <div class="flex justify-between items-center mb-2 px-2">
-              <label for="epsilon"> Epsilon (ε) <i class="fas fa-question-circle" id="epsilon"></i></label>
+              <label for="epsilon" id="epsilon"> Epsilon (ε) <i class="fas fa-question-circle"></i></label>
               <input
                 class="border border-gray-500 p-1 md:mr-48 epsilon"
                 type="number"
@@ -185,7 +185,7 @@
               />
             </div>
             <div class="flex justify-between items-center mb-2 px-2">
-              <label for="alpha"> Alpha (α) <i class="fas fa-question-circle" id="alpha"></i></label>
+              <label for="alpha" id="alpha"> Alpha (α) <i class="fas fa-question-circle"></i></label>
               <input
                 class="border border-gray-500 p-1 md:mr-48 alpha"
                 type="number"
@@ -197,7 +197,7 @@
               />
             </div>
             <div class="flex justify-between items-center mb-2 px-2">
-              <label for="gamma"> Gamma (γ) <i class="fas fa-question-circle" id="gamma"></i></label>
+              <label for="gamma" id="gamma"> Gamma (γ) <i class="fas fa-question-circle"></i></label>
               <input
                 class="border border-gray-500 p-1 md:mr-48 gamma"
                 type="number"
