--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link href="dist/styles.css" rel="stylesheet" />
+    <link href="styles.css" rel="stylesheet" />
   </head>
   <body class="bg-orange-100">
     <div
@@ -237,7 +237,7 @@
         </section>
       </div>
     </div>
-    <script src="dist/main.js"></script>
+    <script src="main.js"></script>
     <footer>
       <p class="text-xs text-center p-2 text-gray-300">
         &copy; Jacek Dwojak. Images of Bird, Pipe, and Background comes from CS50's Introduction to Game Development
