--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       name="keywords"
       content="reinforcement learning, Q-value iteration, artificial intelligence, AI, machine learning"
     />
-    <link rel="canonical" href="https://www.yourwebsite.com/reinforcement-learning-q-value-iteration" />
+    <link rel="canonical" href="https:/flappy-bird-js.onrender.com" />
     <title>Reinforcement Learning with Flappy Bird</title>
     <link
       rel="stylesheet"
