--- a/index.html
+++ b/index.html
@@ -232,7 +232,8 @@
             </div>
           </div>
           <div class="overflow-x-scroll md:overflow-hidden bg-white shadow-sm w-full md:w-[640px] md:h-[400px]">
-            <svg class="chart"></svg>
+            <!-- <svg class="chart"></svg> -->
+            <canvas></canvas>
           </div>
         </section>
       </div>
